--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/efub?useUnicode=true&characterEncoding=utf-8
 
-spring.datasource.username=root
+spring.datasource.username=
 
-spring.datasource.password=9791
+spring.datasource.password=
 
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
